--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,371 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DocsControl"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"           
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid/>
+        ResizeMode="NoResize"
+        AllowsTransparency="True"
+        WindowStartupLocation="CenterScreen"
+        FontFamily="Century Gothic"
+        Background="#1D1B1B"
+        Title="MainWindow" Height="890" Width="1300" WindowStyle="None">
+    <Grid>
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="0.029"/>
+                <TranslateTransform/>
+            </TransformGroup>
+        </Grid.RenderTransform>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="31*"/>
+            <ColumnDefinition Width="369*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="52*"/>
+            <RowDefinition Height="389*"/>
+        </Grid.RowDefinitions>
+
+        <materialDesign:Card
+            x:Name="navSide"
+            Background="#008080"
+            Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
+            Padding="8"
+            UniformCornerRadius="1"
+            Grid.ColumnSpan="2"
+            Margin="0,0,1044,0"
+            Grid.RowSpan="2">
+
+            <Separator 
+                Background="White"
+                HorizontalAlignment="Left"
+                Margin="2,192,0,639"
+                Width="234"/>
+
+        </materialDesign:Card>
+
+        <materialDesign:Card
+            Name="navHeader"
+             
+            Background="white"
+            Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
+            Padding="8" Grid.Column="1" Margin="155,0,0,80" MouseDown="navHeader_MouseDown"/>
+
+
+        <materialDesign:Card
+            Name="navHeader2"
+             
+            Background="white"
+            Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"
+            Padding="8" Grid.Column="1" Margin="155,760,0,0" Grid.Row="1">
+            <materialDesign:TimePicker HorizontalAlignment="Left" Margin="898,0,0,0" VerticalAlignment="Top"/>
+
+        </materialDesign:Card>
+
+
+        <Label   
+            HorizontalContentAlignment="Right"
+            Name="lblDateTime"
+            Cursor="Hand"
+            FontWeight="Bold"
+            Foreground="#EC4D37"            
+            FontSize="14"
+            Grid.Column="1"
+            Margin="811,760,10,0" Grid.Row="1">
+        </Label>
+        
+        <Image
+            Source="D:\Downloads\Icons\tesda logo white.png"
+            HorizontalAlignment="Left"
+            Height="118"
+            Margin="63,45,0,0"
+            VerticalAlignment="Top"
+            Width="119"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="2"/>
+
+        <Label 
+            Foreground="White"
+            HorizontalAlignment="Center"
+            FontSize="20"
+            Margin="21,63,1063,682"
+            Grid.Row="1"
+            Grid.ColumnSpan="2">
+            TESDA CaLaBaRZon
+        </Label>
+
+        <Button 
+            Click="buttonDashboard"
+            BorderThickness="0"
+                Background="#008080"
+                Grid.ColumnSpan="2"
+                Margin="0,138,1050,590"
+                Grid.Row="1"
+                Height="Auto">
+            <StackPanel 
+                Orientation="Horizontal"                        
+                Width="236">
+                <Image 
+                    HorizontalAlignment="Left"
+                    Source="D:\Downloads\Icons\chart-icon-color-white.png"
+                    Width="44"/>
+                <Label 
+                    FontSize="14"
+                    Foreground="White"
+                    Padding="10"                       
+                    VerticalAlignment="Center"                       
+                    Width="189">
+                    DASHBOARD
+                </Label >
+            </StackPanel>
+        </Button>
+
+        <Button         
+            Click="buttonOutgoing"
+            BorderThickness="0"
+            Background="#008080"
+            Grid.ColumnSpan="2"
+            Margin="0,200,1050,528"
+            Grid.Row="1"
+            Height="Auto"
+            Width="250">
+            <StackPanel                
+                Orientation="Horizontal"
+                Width="236">
+                <Image
+                    HorizontalAlignment="Left"
+                    Source="D:\Downloads\Icons\Outgoing.png"
+                    Width="43"/>
+                <Label
+                    FontSize="14"
+                    Foreground="White"
+                    Padding="10"
+                    VerticalAlignment="Center"
+                    Width="184">
+                    OUTGOING
+                </Label >
+            </StackPanel>
+        </Button>
+
+        <Button 
+            Click="buttonIncoming"
+            BorderThickness="0"
+            Background="#008080"
+            Grid.ColumnSpan="2"
+            Margin="0,262,1050,466"
+            Grid.Row="1"
+            Height="Auto"
+            Width="250">
+            <StackPanel
+                Orientation="Horizontal"
+                Width="236">
+                <Image
+                    HorizontalAlignment="Left"
+                    Source="D:\Downloads\Icons\Incoming.png"
+                    Width="43"/>
+                <Label
+                    FontSize="14"
+                    Foreground="White"
+                    Padding="10"
+                    VerticalAlignment="Center"
+                    Width="184">
+                    INCOMING
+                </Label >
+            </StackPanel>
+        </Button>
+
+        <Button
+            Click="buttonDocuments"
+            BorderThickness="0"
+            Background="#008080"
+            Grid.ColumnSpan="2"
+            Margin="0,324,1050,404"
+            Grid.Row="1"
+            Height="Auto"
+            Width="250">
+            <StackPanel
+                Orientation="Horizontal"
+                Width="236">
+                <Image
+                    HorizontalAlignment="Left"
+                    Source="D:\Downloads\Icons\billing-icon-color-white.png"
+                    Width="43"/>
+                <Label
+                    FontSize="14"
+                    Foreground="White"
+                    Padding="10"
+                    VerticalAlignment="Center"                   
+                    Width="184">
+                    DOCUMENTS
+                </Label >
+            </StackPanel>
+        </Button>
+
+        <Label 
+            Name="lblLogout"
+            Cursor="Hand"
+            FontWeight="Bold"
+            Foreground="#EC4D37"
+            HorizontalAlignment="Center"
+            FontSize="14" Grid.Column="1"
+            Margin="1125,0,10,80">
+            LOGOUT
+        </Label>
+        <Label 
+            Foreground="#EC4D37"
+            HorizontalAlignment="Center"
+            FontSize="14" Grid.Column="1"
+            Margin="1108,0,74,80">|
+        </Label>
+
+        <Label   
+            HorizontalContentAlignment="Right"
+            Name="lblUser"
+            Cursor="Hand"
+            FontWeight="Bold"
+            Foreground="#EC4D37"            
+            FontSize="14"
+            Grid.Column="1"
+            Margin="979,0,90,80"
+            Width="130">
+            ADMIN
+        </Label>
+
+        <TreeView 
+            Cursor="Hand"
+            MinWidth="220"
+            Grid.ColumnSpan="2"
+            Margin="0,406,1050,188"
+            Grid.Row="1">
+            <TreeViewItem
+                FontSize="14"                
+                Padding="0"
+                Foreground="white"
+                Header="OTHERS">
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="USERS">
+                    <!--<TextBlock
+                        x:Name="ADD USER">
+                        <Run
+                            Text="EDIT USER" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvCompendium">
+                        <Run
+                            Text="COMPENDIUM" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="FOCALSHIP">
+                    <!--<TextBlock
+                        x:Name="tvEmpty3">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvEmpty4">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="FOCALS">
+                    <!--<TextBlock
+                        x:Name="tvEmpty3">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvEmpty4">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="DOCUMENT TYPES">
+                    <!--<TextBlock
+                        x:Name="tvEmpty1">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvEmpty2">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="POSITIONS">
+                    <!--<TextBlock
+                        x:Name="tvEmpty3">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvEmpty4">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+
+
+                <TreeViewItem
+                    FontSize="14"
+                    Padding="0"
+                    Foreground="white"
+                    Header="OFFICES">
+                    <!--<TextBlock
+                        x:Name="tvEmpty3">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>
+                    <TextBlock
+                        x:Name="tvEmpty4">
+                        <Run
+                            Text="EMPTY" />
+                    </TextBlock>-->
+                </TreeViewItem>
+
+            </TreeViewItem>
+        </TreeView>
+        <StackPanel 
+            x:Name="sp1"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            Height="838"
+            Margin="155,25,0,0" 
+            VerticalAlignment="Top"
+            Width="1044"
+            Grid.RowSpan="2" RenderTransformOrigin="0.5,0.5">
+            <StackPanel.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform X="0.003"/>
+                </TransformGroup>
+            </StackPanel.RenderTransform>
+        </StackPanel>
+    </Grid>
 </Window>
