--- a/View/vOutgoing.xaml
+++ b/View/vOutgoing.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DocsControl.View.vOutgoing"
+﻿<UserControl x:Class="DocsControl.ViewModel.vmOutgoing"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,6 +10,194 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Height="856" Width="1034">
     <Grid>
-            
+        <Label
+            Content="OUTGOING"
+            Foreground="#008080"
+            FontSize="55" Margin="2,0,706,776"/>
+        <Label          
+            Foreground="#008080"
+            FontWeight="Bold"
+            Content="For Signature"
+            Margin="0,113,698,709"
+            FontSize="20"
+            Height="Auto"
+            Width="Auto"
+            HorizontalContentAlignment="Center"/>
+        <Label
+            Foreground="#008080"
+            Content="Signed"
+            FontWeight="Bold"
+            Margin="345,113,353,709"
+            FontSize="20"
+            Height="Auto"
+            Width="Auto"
+            HorizontalContentAlignment="Center"/>
+        <Label            
+            Foreground="#008080"
+            FontWeight="Bold"
+            Content="Released"
+            Margin="688,113,10,709"
+            FontSize="20"
+            Height="Auto"
+            Width="Auto"
+            HorizontalContentAlignment="Center"/>
+
+        <!--<Button 
+            Height="Auto"
+            Margin="869,10,10,824"
+            Content="ADD DOCUMENT"
+            FontSize="11"/>-->
+        
+
+        <ListView             
+            BorderThickness="10"
+            Name="lvForSign"
+            ItemsSource="{Binding Items1}" Margin="0,152,698,10">
+            <ListView.View>
+                <GridView>
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style TargetType="GridViewColumnHeader">
+                            <Setter Property="Foreground" Value="#008080"></Setter>
+                            <Setter Property="FontWeight" Value="Bold"></Setter>
+                            <Setter Property="Width" Value="190"></Setter>
+                        </Style>
+                    </GridView.ColumnHeaderContainerStyle>
+                    <!--<GridViewColumn                       
+                        DisplayMemberBinding="{Binding DocType}"
+                        Header="Type" />-->
+                    <GridViewColumn
+                       Width="170"                        
+                        Header="Subject">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock 
+                                    Width="170"        
+                                    x:Name="txt"
+                                    Text="{Binding Path=OperatingUnit}" 
+                                    Foreground="#EC4D37"
+                                   ></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn   
+                         Width="170"    
+                        Header="Date">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock
+                                    Width="170"        
+                                    x:Name="txt"                 
+                                    Text="{Binding Email}" 
+                                    Foreground="#EC4D37"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <ListView 
+            Name="lvSigned"
+            ItemsSource="{Binding Items1}" Margin="345,152,353,10">
+            <ListView.View>
+                <GridView>
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style TargetType="GridViewColumnHeader">
+                            <Setter Property="Foreground" Value="#008080"></Setter>
+                            <Setter Property="FontWeight" Value="Bold"></Setter>
+                            <Setter Property="Width" Value="190"></Setter>
+                        </Style>
+                    </GridView.ColumnHeaderContainerStyle>
+                    <!--<GridViewColumn                       
+                        DisplayMemberBinding="{Binding DocType}"
+                        Header="Type" />-->
+                    <GridViewColumn
+                       Width="170"                        
+                        Header="Subject">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Width="170" x:Name="txt" Text="{Binding Path=Subject}" Foreground="#008080"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn   
+                         Width="170"    
+                        Header="Date">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Width="170" x:Name="txt" Text="{Binding Date}" Foreground="#008080"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <ListView 
+            Name="lvForRelease"
+            ItemsSource="{Binding Items1}" Margin="688,152,10,10">
+            <ListView.View>
+                <GridView>
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style TargetType="GridViewColumnHeader">
+                            <Setter Property="Foreground" Value="#008080"></Setter>
+                            <Setter Property="FontWeight" Value="Bold"></Setter>
+                            <Setter Property="Width" Value="190"></Setter>
+                        </Style>
+                    </GridView.ColumnHeaderContainerStyle>
+                    
+                    <!--<GridViewColumn                       
+                        DisplayMemberBinding="{Binding DocType}"
+                        Header="Type" />-->
+                    <GridViewColumn
+                                      Width="170" 
+                        Header="Subject">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock x:Name="txt" Text="{Binding Path=Subject}" Foreground="#008080"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn     
+                        Width="170" 
+                        Header="Date">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock x:Name="txt" Text="{Binding Date}" Foreground="#008080"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn> 
+                    
+                    <!--<GridViewColumn
+                        Width="170"                        
+                        Header="Subject">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock x:Name="txt" Text="{Binding Path=Subject}" Foreground="#008080"></TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn                      
+                        Header="Date">
+                        <GridViewColumn.CellTemplate>
+                        <DataTemplate>
+                                <TextBlock x:Name="txt" Text="{Binding Date}" Foreground="#008080"></TextBlock>
+                        </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>-->
+                </GridView>
+            </ListView.View>
+        </ListView>
+        
+        
+        <Button            
+            Margin="968,769,10,31"
+            Style="{StaticResource MaterialDesignFloatingActionButton}"
+            ToolTip="MaterialDesignFloatingActionButton">
+            <materialDesign:PackIcon
+                Kind="Add"
+                Height="24"
+                Width="24" />
+        </Button>
     </Grid>
 </UserControl>
