--- a/Dialogs/dDocInfo.xaml
+++ b/Dialogs/dDocInfo.xaml
@@ -29,7 +29,7 @@
         <Grid  
             Background="White"
             HorizontalAlignment="Left"
-            Height="498"
+            Height="178"
             Margin="0,38,0,0" 
             VerticalAlignment="Top" 
             Width="565">
@@ -58,12 +58,12 @@
                 Content="CONTROL NUMBER"                    
                 FontWeight="Bold"                   
                 HorizontalAlignment="Left"                  
-                Margin="362,17,0,0"                 
+                Margin="348,17,0,0"                 
                 VerticalAlignment="Top"/>
             <Label 
                 Content="CONTROL NUMBER"                                                  
                 HorizontalAlignment="Left"                  
-                Margin="362,40,0,0"                 
+                Margin="348,40,0,0"                 
                 VerticalAlignment="Top"/>
             <Label 
                 Content="DOCUMENT TYPE"                    
@@ -89,55 +89,12 @@
                 Content="DATE ADDED"                    
                 FontWeight="Bold"                   
                 HorizontalAlignment="Left"                  
-                Margin="362,95,0,0"                 
+                Margin="348,95,0,0"                 
                 VerticalAlignment="Top"/>
             <Label 
                 Content="DATE ADDED"                                                  
                 HorizontalAlignment="Left"                  
-                Margin="362,118,0,0"                 
-                VerticalAlignment="Top"/>
-
-            <Label 
-                Content="TIMELINE"                    
-                FontWeight="Bold"                   
-                HorizontalAlignment="Left"                  
-                Margin="45,296,0,0"                 
-                VerticalAlignment="Top"/>
-
-            <Label 
-                Content="FOR SIGNATURE"                    
-                FontWeight="Bold"                   
-                HorizontalAlignment="Left"                  
-                Margin="45,319,0,0"                 
-                VerticalAlignment="Top"/>
-
-            <Label 
-                Content="SIGNED"                    
-                FontWeight="Bold"                   
-                HorizontalAlignment="Left"                  
-                Margin="272,319,0,0"                 
-                VerticalAlignment="Top"/>
-
-            <Label 
-                Content="RELEASED"                    
-                FontWeight="Bold"                   
-                HorizontalAlignment="Left"                  
-                Margin="457,319,0,0"                 
-                VerticalAlignment="Top"/>
-            <Label 
-                Content="FOR SIGNATURE"                                                
-                HorizontalAlignment="Left"                  
-                Margin="45,342,0,0"                 
-                VerticalAlignment="Top"/>
-            <Label 
-                Content="SIGNED"                                     
-                HorizontalAlignment="Left"                  
-                Margin="272,342,0,0"                 
-                VerticalAlignment="Top"/>
-            <Label 
-                Content="RELEASED"                                     
-                HorizontalAlignment="Left"                  
-                Margin="457,342,0,0"                 
+                Margin="348,118,0,0"                 
                 VerticalAlignment="Top"/>
         </Grid>
 
@@ -149,5 +106,118 @@
             ToolTip="OKAY"
             Margin="455,553,10,10">
         </Button>
+        <Grid  
+            Background="White"
+            HorizontalAlignment="Left"
+            Height="144"
+            Margin="0,221,0,0" 
+            VerticalAlignment="Top" 
+            Width="565">
+
+            <Label 
+                Content="FROM"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="24,10,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="TO"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="348,10,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="24,38,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="DATE ADDED"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="24,90,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="EMAIL"                                                  
+                HorizontalAlignment="Left"                  
+                Margin="24,113,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                                       
+                HorizontalAlignment="Left"                  
+                Margin="24,61,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="348,38,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="DATE ADDED"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="348,90,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="EMAIL"                                                  
+                HorizontalAlignment="Left"                  
+                Margin="348,113,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                                       
+                HorizontalAlignment="Left"                  
+                Margin="348,61,0,0"                 
+                VerticalAlignment="Top"/>
+        </Grid>
+        <Grid  
+            Background="White"
+            HorizontalAlignment="Left"
+            Height="144"
+            Margin="0,370,0,0" 
+            VerticalAlignment="Top" 
+            Width="565">
+
+            <Label 
+                Content="TIMEFRAME"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="24,10,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FOR SIGNATURE"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="24,38,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                                       
+                HorizontalAlignment="Left"                  
+                Margin="24,61,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="SIGNED BY RD"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="245,38,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="RELEASED"                    
+                FontWeight="Bold"                   
+                HorizontalAlignment="Left"                  
+                Margin="457,38,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="EMAIL"                                                  
+                HorizontalAlignment="Left"                  
+                Margin="457,61,0,0"                 
+                VerticalAlignment="Top"/>
+            <Label 
+                Content="FULL NAME"                                       
+                HorizontalAlignment="Left"                  
+                Margin="245,61,0,0"                 
+                VerticalAlignment="Top"/>
+        </Grid>
     </Grid>
 </Window>
